# dictum_rs

./: .gitignore  Cargo.toml  Config.toml  Errors.toml  README.md
resources/: notas-scripts.md
resources/laws/: colombia.constitucion-backup.law  colombia.constitucion.config.toml  colombia.constitucion.law
resources/laws/colombia.constitucion/: colombia.constitucion.titulo-1.capitulo-0.articulo-1.law  colombia.constitucion.titulo-1.capitulo-0.articulo-10.law  colombia.constitucion.titulo-1.capitulo-0.articulo-2.law  colombia.constitucion.titulo-1.capitulo-0.articulo-3.law  colombia.constitucion.titulo-1.capitulo-0.articulo-4.law  colombia.constitucion.titulo-1.capitulo-0.articulo-5.law  colombia.constitucion.titulo-1.capitulo-0.articulo-6.law  colombia.constitucion.titulo-1.capitulo-0.articulo-7.law  colombia.constitucion.titulo-1.capitulo-0.articulo-8.law  colombia.constitucion.titulo-1.capitulo-0.articulo-9.law  colombia.constitucion.titulo-2.capitulo-1.articulo-11.law  colombia.constitucion.titulo-2.capitulo-1.articulo-12.law  colombia.constitucion.titulo-2.capitulo-1.articulo-13.law
resources/reference/: colombia.constitucion.titulo-0.capitulo-0.articulo-0.paragrafo-0.toml
src/: catalogue.rs  cryptography.rs  documents.rs  figures.rs  files.rs  language.rs  laws.rs  main.rs  mathematics.rs  server.rs  transformer.rs  utils.rs
