[package]
name = "dictum_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-bert = { git = "https://github.com/guillaume-be/rust-bert" }
lazy_static = "1.4.0"
anyhow = "1.0.58"
config = "0.13.2"
tch = "~0.8.0"
sha2 = "0.10.6"
hex = "0.4.2"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
features=["json"]
